--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en-US">
 
 <head>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -20,7 +20,7 @@
     <meta property="og:type" content="article">
     <meta property="article:author" content="Tom Hibbers">
     <meta property="article:published_time" content="date_time">
-    <meta property="og:locale" content="pt_BR">
+    <meta property="og:locale" content="en_US">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="If you're looking to hire a dedicated dev who's always looking to improve, you've come to the right place!" />
 </head>
